--- a/3/customers/back-end/customers.Infra.Data/customers.Infra.Data.csproj
+++ b/3/customers/back-end/customers.Infra.Data/customers.Infra.Data.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="Context\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.12" />
   </ItemGroup>
 
   <ItemGroup>
