--- a/3/customers/back-end/customers.Infra.CrossCutting/customers.Infra.CrossCutting.csproj
+++ b/3/customers/back-end/customers.Infra.CrossCutting/customers.Infra.CrossCutting.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="InversionOfControl\" />
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
   </ItemGroup>
 
   <ItemGroup>
