--- a/3/customers/back-end/customers.Services/customers.Service.csproj
+++ b/3/customers/back-end/customers.Services/customers.Service.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="Services\" />
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
   </ItemGroup>
 
   <ItemGroup>
