Finalização de métodos do controller e adição de fluent validation ao projeto.

--- a/3/customers/back-end/customers.Application/customers.Application.csproj
+++ b/3/customers/back-end/customers.Application/customers.Application.csproj
@@ -9,6 +9,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="9.5.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\customers.Domain\customers.Domain.csproj" />
     <ProjectReference Include="..\customers.Infra.CrossCutting\customers.Infra.CrossCutting.csproj" />
     <ProjectReference Include="..\customers.Services\customers.Service.csproj" />
