--- a/3/customers/back-end/customers.Domain/customers.Domain.csproj
+++ b/3/customers/back-end/customers.Domain/customers.Domain.csproj
@@ -9,4 +9,8 @@
     <Folder Include="Interfaces\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="9.5.1" />
+  </ItemGroup>
+
 </Project>
