--- a/3/customers/back-end/customers.Infra.CrossCutting/customers.Infra.CrossCutting.csproj
+++ b/3/customers/back-end/customers.Infra.CrossCutting/customers.Infra.CrossCutting.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Folder Include="InversionOfControl\" />
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.0.7" />
   </ItemGroup>
 
   <ItemGroup>
